--- a/_includes/world/2024/header.html
+++ b/_includes/world/2024/header.html
@@ -10,7 +10,7 @@
     <div class="center">
       <a href="/world/2024/faq" class="link">FAQ</a>
       <a href="/world/2024/speakers" class="link">Speakers</a>
-      <a href="/world/2024/agenda/day-0" class="link">Agenda</a>
+      <a href="/world/2024/agenda" class="link">Agenda</a>
     </div>
 
     <div class="sideContainer right">
@@ -33,7 +33,7 @@
     <div class="sideContainer right">
       <a href="/world/2024/faq" class="link">FAQ</a>
       <a href="/world/2024/speakers" class="link">Speakers</a>
-      <a href="/world/2024/agenda/day-0" class="link">Agenda</a>
+      <a href="/world/2024/agenda" class="link">Agenda</a>
     </div>
   </nav>
 </header>
