Rails World 2024 - Agenda (#312)
* implement starting agenda

* Fully working agenda

* unused code

* touchups

* small touchups + 3 days

* typos

* add missing dates

* Update agenda (#6)

* Updated the Agenda

* Empty line added

* Refactored the page

* Minor refactoring

* Redirection fix

* Removed unwanted codes

* Updated the Agenda

* Empty line added

* Refactored the page

* Minor refactoring

* Agenda redirection issue fixed

* fix merge conflict

* 2 new sponsors + logo update

* agenda tab size

* tab space 2 for other html files

* Update 1-opening-session.md

* Update opening-keynote-dhh.md

* Update and rename closing-keynote-eileen.md to closing-keynote.md

* Update and rename opening-keynote.md to opening-keynote-eileen.md

* Update 1-opening-session.md

* Update chris-power.md

* Update chris-power.md

* Update chris-power.md

* Update 1-early-registration.md

* Update closing-party.md

* Update 1-opening-session.md

* Update donal-mcbreen.md

* Update jamis-buck.md

* Update kevin-mcconnell.md

* Update greg-molnar.md

* Update jenny-shen.md

* Update justin-searls.md

* Update rafael-franca.md

* Update emmanuel-hayford.md

* Update closing-keynote.md

---------

Co-authored-by: Akhil G Krishnan <akhilgkrishnan4u@gmail.com>
Co-authored-by: Amanda Perino <58528404+AmandaPerino@users.noreply.github.com>

--- a/_includes/world/2024/tito-widget.html
+++ b/_includes/world/2024/tito-widget.html
@@ -1,13 +1,9 @@
 <div class="titto-container">
-    <h3 class="ticketTitle">Tickets</h3>
     <div class="iframeContainer">
-        <div id="tito-widget"></div>
-        <!-- Bring back after no more sale -->
-        <!-- <div class="soldOutContainer">
-            <p>
-                Sold out. If tickets are returned or released we will release another batch later this year.
-            </p>
-        </div> -->
+        <!-- <div id="tito-widget"></div> -->
+        <div class="soldOutContainer">
+
+        </div>
     </div>
 </div>
 <script>
