--- a/_includes/world/2024/agenda-page.html
+++ b/_includes/world/2024/agenda-page.html
@@ -23,8 +23,8 @@
 <div class="dayContainer">
   <div class="titleContainer">
     <h2>Agenda</h2>
-    <p>Rails World featured two full days of keynotes, talks, workshops, sessions, and more. All sessions on the two
-      main stages were recorded and will be shared soon.</p>
+    <p>Rails World is two full days of keynotes, technical sessions, workshops, food, and fun. The Rails World app is being developed by Telos Labs and will be released soon so that attendees can build their schedule. All sessions on the two
+      main stages will be recorded and will be shared shortly after the event.</p>
   </div>
   <div class="mainContainer">
     <div class="dayTabs">
