Twitter logo and name changes

--- a/_sass/modules/_icon.scss
+++ b/_sass/modules/_icon.scss
@@ -32,12 +32,12 @@
 
   }
 
-  &--twitter {
+  &--x {
 
     padding-left: 23px;
 
     &:after {
-      background-image: url(../images/icon-twitter.svg);
+      background-image: url(../images/icon-x.svg);
       width: 19px;
     }
 
