--- a/_includes/world/2024/agenda-page.html
+++ b/_includes/world/2024/agenda-page.html
@@ -78,11 +78,11 @@
               primarySpeaker.role }}{% if primarySpeaker.company %}, {{ primarySpeaker.company }}{% endif %}</p>
             {% endif %}
             {% if secondarySpeaker %}
-            <p class="speakerName">, & {{ secondarySpeaker.first_name }} {{ secondarySpeaker.last_name }}, {{
+            <p class="speakerName">, {{ secondarySpeaker.first_name }} {{ secondarySpeaker.last_name }}, {{
               secondarySpeaker.role }}{% if secondarySpeaker.company %}, {{ secondarySpeaker.company }}{% endif %}</p>
             {% endif %}
             {% if thirdSpeaker %}
-            <p class="speakerName">, & {{ thirdSpeaker.first_name }} {{ thirdSpeaker.last_name }}, {{
+            <p class="speakerName">, {{ thirdSpeaker.first_name }} {{ thirdSpeaker.last_name }}, {{
               thirdSpeaker.role }}{% if thirdSpeaker.company %}, {{ thirdSpeaker.company }}{% endif %}</p>
             {% endif %}
           </div>
