Enabling global nav site wide

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <nav class="nav">
   <a class="nav__logo" href="/" aria-label="Ruby on Rails"></a>
 
-  {% if page.id == 'home' %}
+  <!-- {% if page.id == 'home' %} -->
     <input class="nav__checkbox" id="nav__checkbox" type="checkbox" role="button" aria-label="menu" />
 
     <label class="nav__toggle" for="nav__checkbox">
@@ -23,5 +23,5 @@
         </ul>
       </div>
     </div>
-  {% endif %}
+  <!-- {% endif %} -->
 </nav>
