Rails World 2024: Speaker cards role & company text bug

--- a/_includes/world/2024/speaker-card.html
+++ b/_includes/world/2024/speaker-card.html
@@ -33,7 +33,7 @@
             <h4 class="name">
                 {{ include.first_name }} {{ include.last_name }}
             </h4>
-            <p>
+            <p class="roleAndCompany">
                 {{ include.role }}{% if include.company and include.company != "false" %}, {{ include.company }}{% endif %}
             </p>
         </div>
