--- a/_sass/world/2024/modules/_speaker_card.scss
+++ b/_sass/world/2024/modules/_speaker_card.scss
@@ -96,12 +96,11 @@
                 font-weight: 500;
             }
 
-            .role {
-                // text-transform: uppercase;
+            .roleAndCompany {
                 font-weight: 300;
                 word-spacing: 1px;
                 line-height: 0.9;
-                font-size: 1.23rem;
+                font-size: 1.53rem;
                 text-align: center;
             }
         }
