--- a/_sass/modules/_nav.scss
+++ b/_sass/modules/_nav.scss
@@ -88,6 +88,14 @@
 
         }
 
+        &:active {
+
+          a span {
+            color: $color-red;
+          }
+          
+        }
+
       }
 
       &:first-child {
