--- a/_sass/modules/_nav.scss
+++ b/_sass/modules/_nav.scss
@@ -88,12 +88,8 @@
 
         }
 
-        &:active {
-
-          a span {
-            color: $color-red;
-          }
-          
+        &.active a span {
+          color: $color-red !important;          
         }
 
       }
