--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
-    <a class="common-button--text" href="https://rubyonrails.org/world/2024" target="_blank">
-      Rails World is sold out. See you in Toronto Sept 26 & 27.
+    <a class="common-button--text" href="https://youtu.be/-cEn_83zRFw?si=RbZUQb8dl3TVRVto" target="_blank">
+      Watch the Rails World 2024 Opening Keynote with DHH online now.
     </a>
   </p>
 </div>
