Adding coming soon banner over case study card

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,6 +25,7 @@
 @import 'modules/blog';
 @import 'modules/cards';
 @import 'modules/core';
+@import 'modules/cornerribbon';
 @import 'modules/docs';
 @import 'modules/example';
 @import 'modules/features';
