--- a/_sass/modules/_docs.scss
+++ b/_sass/modules/_docs.scss
@@ -91,6 +91,8 @@
         border: 1px solid #e5e5e5;
         border-radius: 8px;
         padding: 0;
+        position: relative;
+        overflow: hidden;
       }
     }
   } // ul
