--- a/_includes/world/2024/agenda-page.html
+++ b/_includes/world/2024/agenda-page.html
@@ -23,7 +23,7 @@
 <div class="dayContainer">
   <div class="titleContainer">
     <h2>Agenda</h2>
-    <p>Rails World is two full days of keynotes, technical sessions, workshops, food, and fun. The Rails World app is being developed by Telos Labs and will be released soon so that attendees can build their schedule. All sessions on the two</p>
+    <p>Rails World was two full days of keynotes, technical sessions, workshops, food, and fun. All sessions were recorded and will be published soon.</p>
   </div>
   <div class="mainContainer">
     <div class="dayTabs">
