--- a/_includes/world/2024/sections/speakers.html
+++ b/_includes/world/2024/sections/speakers.html
@@ -11,9 +11,9 @@
 <section class="content-container speaker-cards">
     <div class="headerContainer">
         <div class="textContainer">
-            <h3>Meet the Speakers</h3>
+            <h3>Big thank you to our speakers</h3>
             <p>
-                Gain invaluable insights from Rails World speakers on the future state of Rails and where
+                The following speakers shared valuable insights at Rails World on the future state of Rails and where
                 Rails is headed tomorrow and beyond.
             </p>
         </div>
