--- a/_includes/world/2024/sections/sponsors.html
+++ b/_includes/world/2024/sections/sponsors.html
@@ -1,6 +1,6 @@
 <section class="content-container sponsor-information-text">
     <div class="titleContainer">
-        <h3>Sponsors</h3>
+        <h3>Thank you, sponsors!</h3>
         <p>
             Thank you, Sponsors! The following sponsors helped us make Rails World an unforgettable experience, and we are truly grateful for their support.
         </p>
