--- a/_includes/world/2024/sections/sponsors.html
+++ b/_includes/world/2024/sections/sponsors.html
@@ -2,7 +2,7 @@
     <div class="titleContainer">
         <h3>Thank you, sponsors!</h3>
         <p>
-            Thank you, Sponsors! The following sponsors helped us make Rails World an unforgettable experience, and we are truly grateful for their support.
+The following sponsors helped us make Rails World an unforgettable experience, and we are truly grateful for their support.
         </p>
     </div>
     {% if site.data.world['2024'].sponsors %}
