--- a/_includes/world/2024/sections/sponsors.html
+++ b/_includes/world/2024/sections/sponsors.html
@@ -1,16 +1,9 @@
 <section class="content-container sponsor-information-text">
     <div class="titleContainer">
-        <h3>Sponsors</h3>
+        <h3>Thank you, sponsors!</h3>
         <p>
-            Sponsoring Rails World means showcasing your brand
-            to a global audience of Rails enthusiasts, developers,
-            and industry leaders. Let's make Rails World an
-            unforgettable experience for all. 
+The following sponsors helped us make Rails World an unforgettable experience, and we are truly grateful for their support.
         </p>
-        <a href="https://public.3.basecamp.com/p/xuZrxDiHj7vQbFzATqz8U8gc" aria-label="View prospectus" target="_blank"
-            class="button main large">
-            VIEW PROSPECTUS
-        </a>
     </div>
     {% if site.data.world['2024'].sponsors %}
     <div class="sponsorCardsContainer">
