--- a/_sass/modules/_docs.scss
+++ b/_sass/modules/_docs.scss
@@ -34,6 +34,21 @@
     } // .common-content
   } // &.text
 
+  h2.thin {
+    color: $color-red;
+    font-size: 2rem !important;
+    font-weight: 200;
+    font-variation-settings: var(--font-weight-200);
+    line-height: 1.4em;
+    display: block;
+    margin: 2em auto 1em;
+    text-align: center;
+  } // h2
+
+  .card {
+    max-height: 200px !important;
+  }
+
   // UL/LIs here are for cards, no bullets actually used. 
   ul {
     list-style-type: none;
