Don't apply counter to ul > li elements

--- a/_sass/common/_content.scss
+++ b/_sass/common/_content.scss
@@ -119,7 +119,7 @@
     counter-reset: item;
     list-style: none;
 
-    li {
+    > li {
 
       counter-increment: item;
       padding-left: 40px;
