Update banner.html on homepage

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
-    <a class="common-button--text" href="https://youtu.be/-cEn_83zRFw?si=RbZUQb8dl3TVRVto" target="_blank">
-      Watch the Rails World 2024 Opening Keynote with DHH online now.
+    <a class="common-button--text" href="https://www.youtube.com/playlist?list=PLHFP2OPUpCeb182aDN5cKZTuyjn3Tdbqx" target="_blank">
+      Watch all Rails World 2024 talks on YouTube now.
     </a>
   </p>
 </div>
