Fix typos in various files

--- a/_sass/world/2024/base/_body.scss
+++ b/_sass/world/2024/base/_body.scss
@@ -2,7 +2,7 @@ html {
   scroll-padding-top: 85px;
 }
 
-// Fonts are only able to be udpated here for some reason.
+// Fonts are only able to be updated here for some reason.
 h1,
 h2,
 h3,
